foundation-objs/main/default/objects/AccountProjectAssetJunction__c/fields/Project_Comment_Formula__c.field-meta.xml
<CustomField>
    <fullName>Project_Comment_Formula__c</fullName>
    <formula>Project__r.Comments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Comment Formula</label>
    <type>Text</type>
</CustomField>