foundation-objs/main/default/objects/AccountProjectAssetJunction__c/fields/Project_PM_Project_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_PM_Project_Owner_Email__c</fullName>
    <formula>Project__r.Pm_Project_Owner_Lookup__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project PM Project Owner Email</label>
    <type>Text</type>
</CustomField>