foundation-objs/main/default/objects/AccountProjectAssetJunction__c/fields/Project_Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Project_Solution_Engineer__c</fullName>
    <formula>Project__r.CTX_SE__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Solution Engineer</label>
    <type>Text</type>
</CustomField>